# MPhSweepKit

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt
examples/materials/: N49_LEA_MTB_permittivity_grid.txt  N95_LEA_MTB_permeability_grid.txt
examples/studies/ferrite_plate_capacitor/: 1_run.ipynb  2_post_processing.ipynb  3_plots.ipynb  cuboid_capacitor_initial.mph  fields_post_processing_expressions.json  global_post_processing_expressions.json
examples/studies/infinite_ferrite_cross_sections/: B_plot.txt  core_cross_section_initial.mph  fields_post_processing_expressions.json  post_pro_script.ipynb  post_processing_script.ipynb  script_1_sweep.ipynb  script_2_data_post_processing.ipynb  script_2_post_processing.ipynb  script_2_sweep_post_processing.ipynb  script_3_data_plot.ipynb  script_3_plot.ipynb  script_3_process_data.ipynb  script_4_field_post_processing.ipynb  script_4_process_fields.ipynb  script_5_field_plot.ipynb  sweep_script.ipynb
mphsweepkit/: __init__.py  cascaded_sweep.py  comsol_functions.py  derive.py  directories.py  io.py  meta_data.py  meta_names.py  model.py  plot_data.py  plot_fields.py  plotting.py  postprocessing.py  process_data.py  process_derive.py  process_fields.py  process_helpers.py  settings.py  sweep.py  sweep_cascade.py  sweep_expansion.py  sweeps.py  tex.py
mphsweepkit/examples/materials/: 3F46_LEA_MTB_permeability_grid.txt  3F46_LEA_MTB_permittivity_grid.txt  N49_LEA_MTB_permeability_grid.txt  N95_LEA_MTB_permittivity_grid.txt
mphsweepkit/utils/: __init__.py  directories.py  parameters.py  sweeps.py
(+16 files in other folders)
